--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     ],
     "minimum-stability": "dev",
     "require": {
-
+        "php": ">=5.2"
+    },
+    "autoload": {
+        "classmap": ["SxGeo.php"]
     }
 }
